fixed alignment of portfolio imgs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,9 +431,11 @@ li{
     }
 
     .container1, .container2, .container3, .container4, .container5{
-        width: 100%;
-        padding: 0;
+        margin: 0 auto;
+        display: block;
+        float: none;
         background-size: cover;
+        margin-bottom: 20px;
     }
 
     .img1green, .img2green, .img3green, .img4green, .img5green{
@@ -441,6 +443,18 @@ li{
         padding-top: 20px;
         margin: 0;
         background-size: cover;
+    }
+
+    .portfolio{
+        text-align: center;
+    }
+
+    #contact{
+        text-align: center;
+    }
+
+    .aboutme{
+        text-align: center;
     }
 
 }
